language/move-lang/tests/move_check/parser/constant_public.exp
error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/constant_public.move:3:5
  │
3 │     public const Foo: u64 = 0;
  │     ^^^^^^ Invalid constant declaration. Constants cannot have visibility modifiers as they are always internal

